# Programmieruebung_Auf_2-5

./: .pdm-python  PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb  README.md  ekgdata.py  main.py  person.py  pyproject.toml  read_data.py  read_pandas.py
data/: person_db.json  power_curve.csv
