[project]
name = "Programmieruebung_Auf_2-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "he4116", email = "he4116@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "jupyter>=1.1.1", "plotly>=6.1.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
